fix(curriculum): align learning outcomes with list items

--- a/client/src/curriculum/module.scss
+++ b/client/src/curriculum/module.scss
@@ -84,7 +84,7 @@
         content: url("../assets/icons/cur-resources.svg");
         display: block;
         height: 24px;
-        margin-right: 1rem;
+        margin-right: 0.5rem;
         width: 24px;
       }
     }
